# src/controllers/notice-form.controller.ts
@@ -1,6 +1,7 @@
 /* eslint-disable */
+import { Form } from "../models";
 import { Get, Route, Tags, Post, Body, Path, Query } from "tsoa";
-import { getForm } from "../repositories/notice-form";
+import { getForm, createForm, IFormPayload } from "../repositories/notice-form";
 
 @Route("fnmobile")
 @Tags("Process")
@@ -8,5 +9,10 @@ export default class FormController {
   @Get("/")
   public async getForm(@Query() profile?: string) {
     return getForm(profile);
+  }
+
+  @Post("/")
+  public async createForm(@Body() body: IFormPayload): Promise<Form> {
+    return createForm(body);
   }
 }
